versions/v2.10/modules/en/pages/installation-and-upgrade/quick-start/deploy-rancher/deploy-rancher.adoc
= Deploying {rancher-product-name} Server
:page-languages: [en, zh]
:revdate: 2025-05-15
:page-revdate: {revdate}
:community-path: getting-started/quick-start-guides/deploy-rancher-manager/index.adoc 
:product-path: installation-and-upgrade/quick-start/deploy-rancher/deploy-rancher.adoc
ifeval::["{build-type}" != "community"]
:xref-qs-aws-marketplace: xref:installation-and-upgrade/quick-start/deploy-rancher/aws-marketplace.adoc
endif::[]
ifeval::["{build-type}" == "community"]
:xref-qs-aws-marketplace: xref:getting-started/quick-start-guides/deploy-rancher-manager/aws-marketplace.adoc
endif::[]

Use one of the following guides to deploy and provision Rancher and a Kubernetes cluster in the provider of your choice.

* {xref-qs-aws-marketplace}[AWS Marketplace] (uses Amazon EKS)
* xref:installation-and-upgrade/quick-start/deploy-rancher/equinix-metal.adoc[Equinix Metal]

If you prefer, the following guide will take you through the same process in individual steps. Use this if you want to run Rancher in a different provider, on prem, or if you would just like to see how easy it is.

* xref:installation-and-upgrade/quick-start/deploy-rancher/helm-cli.adoc[Manual Install]
