versions/v2.14/modules/en/pages/installation-and-upgrade/quick-start/deploy-rancher/deploy-rancher.adoc
= Deploying {rancher-product-name} Server
:page-languages: [en, de, es, fr, ja, pt, zh]
:revdate: 2026-07-15
:page-revdate: {revdate}
:community-path: getting-started/quick-start-guides/deploy-rancher-manager/index.adoc 
:product-path: installation-and-upgrade/quick-start/deploy-rancher/deploy-rancher.adoc
ifeval::["{build-type}" != "community"]
:xref-qs-rancher-on-amazon-eks: xref:installation-and-upgrade/hosted-kubernetes/rancher-on-amazon-eks.adoc
:xref-qs-equinix: xref:installation-and-upgrade/quick-start/deploy-rancher/equinix-metal.adoc
:xref-qs-helm-cli: xref:installation-and-upgrade/quick-start/deploy-rancher/helm-cli.adoc
endif::[]
ifeval::["{build-type}" == "community"]
:xref-qs-rancher-on-amazon-eks: xref:getting-started/installation-and-upgrade/install-upgrade-on-a-kubernetes-cluster/rancher-on-amazon-eks.adoc
:xref-qs-equinix: xref:getting-started/quick-start-guides/deploy-rancher-manager/equinix-metal.adoc
:xref-qs-helm-cli: xref:getting-started/quick-start-guides/deploy-rancher-manager/helm-cli.adoc
endif::[]

Use one of the following guides to deploy and provision Rancher and a Kubernetes cluster in the provider of your choice.

* {xref-qs-rancher-on-amazon-eks}[Amazon EKS]
* {xref-qs-equinix}[Equinix Metal]

If you prefer, the following guide will take you through the same process in individual steps. Use this if you want to run Rancher in a different provider, on prem, or if you would just like to see how easy it is.

* {xref-qs-helm-cli}[Manual Install]

Alternatively, you can also use https://documentation.suse.com/en-us/cloudnative/rancher-srfa/[SUSE Rancher for AWS] as a distinct, fully managed Software-as-a-Service (SaaS) offering through the AWS Marketplace.
